# napari-blosc2

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_blosc2/: _reader.py  _writer.py  napari.yaml
src/napari_blosc2/_tests/: test_reader.py  test_writer.py
